Backfill notes for our first 6 releases

--- a/content/collections/releases/2018-09-02.md
+++ b/content/collections/releases/2018-09-02.md
@@ -3,18 +3,5 @@ date: "2018-09-02"
 ---
 
 New
-
-- batmobile
-- grappling hooks
-
-Improved
-
-- batcave
-
-Changed
-
-- butler
-
-Fixed
-
-- security doors
+- Brewers can find buyers to add to their account.
+- Brewers can scan kegs as delivered and track them by buyer.
