Update the 2018-11-11 release

--- a/content/collections/releases/2018-11-11.md
+++ b/content/collections/releases/2018-11-11.md
@@ -7,4 +7,5 @@ New
 - The Keg Info scanner mode shows Beer and Buyer information.
 
 Fixed
-- Addresses load reliably. This was a problem especially in long lists of buyers.
+- Addresses load reliably. This was a problem especially in long lists of Buyers.
+- Adding Buyers works reliably. Previously, a bug made it was possible to create duplicate Buyers if the contact email address for the Buyer already existed in the system.
