Update the 2018-12-24 release

--- a/content/collections/releases/2018-12-24.md
+++ b/content/collections/releases/2018-12-24.md
@@ -2,5 +2,8 @@
 date: "2018-12-24"
 ---
 
+New
+- Villains can sort Breweries and Buyers.
+
 Fixed
 - Some users have been seeing a white page after we release an update to the software. We've fixed the problem now and the app should always be able to just refresh.
