Update the 2019-03-31 release

--- a/content/collections/releases/2019-03-31.md
+++ b/content/collections/releases/2019-03-31.md
@@ -7,6 +7,10 @@ New
 - Villains can edit Breweries and Merchants.
 - Villains can invite new Users to Breweries.
 
+Improved
+- When creating users, stray characters in email addresses are automatically fixed.
+
 Fixed
 - Scanning new keg labels with the keg info scanner no longer displays an error.
 - Users can now be added to breweries even if they're already the contact for a Merchant.
+- When joining Distribrewtion users can now properly see the name of their brewery.
