Update the 2020-03-10 release
Authored-by: Leonhardt Koepsell <leonhardt@distribrewtion.com>

--- a/content/collections/releases/2020-03-10.md
+++ b/content/collections/releases/2020-03-10.md
@@ -13,3 +13,4 @@ Fixed
 - The users page was inaccessible to godfathers.
 - Kegs were not properly sorted in keg inventory and tracking.
 - An erroneous snackbar was showing when users completed the forgot password workflow.
+- Beer profiles were not sorted alphabetically.
