Update the 2020-08-15 release
Co-authored-by: David Alvarado <dalvarado1@gmail.com>
Co-authored-by: Leonhardt Koepsell <leonhardt@distribrewtion.com>

--- a/content/collections/releases/2020-08-15.md
+++ b/content/collections/releases/2020-08-15.md
@@ -3,7 +3,9 @@ date: "2020-08-15"
 ---
 
 New
-- Godfathers can mark breweries as inactive.
+- Godfathers can deactivate breweries.
+- Billing is automatically run every morning.
 
 Improved
 - After logging in, users are redirected to the page they were originally trying to go to.
+- Sales leads are posted to Slack instead of sent via email.
