Update the 2020-10-05 release
Authored-by: Leonhardt Koepsell <leonhardt@distribrewtion.com>

--- a/content/collections/releases/2020-10-05.md
+++ b/content/collections/releases/2020-10-05.md
@@ -8,3 +8,6 @@ New
 Improved
 - Deactivated breweries are never billed.
 - The homepage carousels scroll infinitely.
+
+Fixed
+- Allow establishments to be added from Google Places API that don't have a region by falling back to the country (e.g. Yellowstone).
